Update game logic and error handling